# simple-rag

./: Phi.md  README.md  flake.nix  main.py  pyproject.toml
